--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,17 @@
 theme: jekyll-theme-hacker
 title: James Swartwood
 description: Personal website for showcasing projects, etc.
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
